...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.league.list.ListLeagueFragment">


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_league"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
...
