...
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_schedule"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab_detail_league"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:focusable="true"/>

...
